--- a/pc/css/contents.css
+++ b/pc/css/contents.css
@@ -4,7 +4,7 @@
 /* 공통 */
 /* new_table : 테이블 padding 값 수정 */
 /* new_sel_span : 라운드형태의 select 버튼 수정 */
-.sr-only {position: absolute; width: 1px; height: 1px; padding: 0; margin: -1px; overflow: hidden; clip: rect(0 0 0 0); white-space: nowrap; border: 0; font-size: 0;}
+.sr_only {position: absolute; width: 1px; height: 1px; padding: 0; margin: -1px; overflow: hidden; clip: rect(0 0 0 0); white-space: nowrap; border: 0; font-size: 0;}
 .new_table tr th, .new_table tr td {padding: 12px 10px;}
 .new_table tr th:first-child, .new_table tr td:first-child {padding-left: 20px;}
 .new_table tr th:last-child, .new_table tr td:last-child {padding-right: 20px;}
@@ -14,6 +14,7 @@
 .new_sel_span select {padding: 6px 40px 6px 16px; border-radius: 9999px; font-size: 16px; letter-spacing: -0.32px; appearance: none; -webkit-appearance: none; -moz-appearance: none;}
 .new_sel_span::after {content: ''; width: 16px; height: 16px; position: absolute; top: 50%; right: 12px; transform: translateY(-50%); background: url('../include/images/arrow16_down.svg') no-repeat center / contain;}
 .new_ipt button[class*='ico']{right: 12px;}
+
 
 /* 운영대학 목록 (UI_ADHPAaM01) */
 .support .youth .gsprog_uni>div+div {margin-top: 40px;}
@@ -95,20 +96,24 @@
 
 /* 참여신청서 - 등록 (UI_ADHPAbS03) */
 .mypage .progmg .my_ptcp_from {}
+.mypage .progmg .req_mark {position: relative; padding-right: 12px;}
+.mypage .progmg .req_mark::after {content: ''; position: absolute; right: 0; top: 25%; transform: translateY(-50%); width: 5px; height: 5px; background-color: #ee2e62; border-radius: 50%;}
 .mypage .progmg .my_ptcp_from .box_group_wrap {}
 .mypage .progmg .my_ptcp_from .box_group_wrap .box_table_wrap {}
 .mypage .progmg .my_ptcp_from .box_table {}
 .mypage .progmg .my_ptcp_from .box_table tr th {}
 .mypage .progmg .my_ptcp_from .box_table tr td {}
 
+.mypage .progmg .radio_ui {margin: auto 8px auto 0; width: 22px; height: 22px; border: 1px solid #757575; border-radius: 50%; display: inline-block; position: relative;}
+.mypage .progmg .radio_item input[type="radio"] {position: absolute; opacity: 0; pointer-events: none;}
+.mypage .progmg .radio_item input[type="radio"]:checked + label .radio_ui::after {content: ""; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 22px; height: 22px; border: 5px solid var(--col_blue); border-radius: 50%;}
+.mypage .progmg .box_radio_group input[type='radio'] + label {margin-left: 0;}
+.ptcp_radiocustom {cursor: pointer;}
+
 .mypage .progmg .my_ptcp_from .box_table .ptcp_form_uni td .box_table_group {display: flex;}
 .mypage .progmg .my_ptcp_from .box_table .ptcp_form_uni td .box_table_group .btnSearch {margin-left: 8px; margin-bottom: 0;}
-.mypage .progmg .my_ptcp_from .box_table .ptcp_form_type .box_radio-group {border: none;}
+.mypage .progmg .my_ptcp_from .box_table .ptcp_form_type .box_radio_group {border: none;}
 .mypage .progmg .my_ptcp_from .box_table .ptcp_form_type label {cursor: pointer; display: flex; align-items: center; margin-left: 0; font-size: 16px; color: #333; font-weight: 400; line-height: 28px; vertical-align: baseline;}
-.mypage .progmg .my_ptcp_from .ptcp_form_type .radio_item + .radio_item {margin-top: 4px;}
-.mypage .progmg .my_ptcp_from .ptcp_form_type .radio_ui {margin: auto 0; margin-right: 8px; width: 22px; height: 22px; border: 1px solid #757575; border-radius: 50%; display: inline-block; position: relative;}
-.mypage .progmg .my_ptcp_from .ptcp_form_type .radio_item input[type="radio"] {position: absolute; opacity: 0; pointer-events: none;}
-.mypage .progmg .my_ptcp_from .ptcp_form_type .radio_item input[type="radio"]:checked + label .radio_ui::after {content: ""; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 22px; height: 22px; border: 5px solid var(--col_blue); border-radius: 50%;}
 .mypage .progmg .my_ptcp_from .grade_wrap .tr_grade .input_txt {vertical-align: baseline;}
 .mypage .progmg .my_ptcp_from .grade_wrap .tr_major .box_table_group {display: flex; align-items: center;}
 .mypage .progmg .my_ptcp_from .grade_wrap .tr_major .box_table_group .btnSearch {margin-left: 8px;}
@@ -118,3 +123,19 @@
 .mypage .progmg .my_ptcp_from .grade_wrap .tr_gradate #gradDate {max-width: 128px;}
 .mypage .progmg .my_ptcp_from .grade_wrap .tr_gradate input#gradDate {padding: 6px 40px 6px 12px;}
 .mypage .progmg .my_ptcp_from .grade_wrap .tr_gradate .btn_calendar {margin: 0; transform: translateY(-25%);} 
+
+.mypage .progmg .agm_area {display: flex; border-top: 1px solid #ddd; border-bottom: 1px solid #ddd;}
+.mypage .progmg .agm_box {padding: 12px 20px; display: flex; align-items: center; justify-content: space-between; gap: 16px; width: calc(100% - 195px); background-color: #f8f8f8;}
+.mypage .progmg .agm_box .agm_desc {}
+.mypage .progmg .agm_box .agm_desc p {color: #333;}
+.mypage .progmg .agm_box .agm_desc strong {color: #ee2e62;}
+.mypage .progmg .agm_box .btn_view_doc {}
+.mypage .progmg .agm_cho {width: 195px; display: flex; justify-content: center; align-items: center;}
+.mypage .progmg .agm_cho .box_radio_group {border: none; display: flex; align-items: center;}
+.mypage .progmg .agm_cho fieldset .radio_item .ptcp_radiocustom {display: flex; align-items: center;} 
+.mypage .progmg .agm_cho fieldset .radio_item + .radio_item {margin-left: 16px;}
+
+.mypage .progmg .box_end_wrap .submit_date_box {display: flex; justify-content: flex-end;}
+.mypage .progmg .box_end_wrap .submit_date_box p {font-size: 16px; font-weight: 400; color: #333;}
+.mypage .progmg .box_end_wrap .submit_date_box p time {font-size: 20px; font-weight: 600; }
+.mypage .progmg .box_end_wrap .btn_box {display: flex; justify-content: space-between; align-items: center;}
