--- a/pc/include/css/main_person.css
+++ b/pc/include/css/main_person.css
@@ -526,14 +526,14 @@
     margin-bottom: 10px
 }
 
-.main_favorite_service_person .layer_set_filter .box_radio-group {
+.main_favorite_service_person .layer_set_filter .box_radio_group {
     width: 100%;
     margin-bottom: 16px;
     padding-bottom: 18px;
     border-bottom: 1px solid #757575
 }
 
-.main_favorite_service_person .layer_set_filter .box_radio-group:last-of-type {
+.main_favorite_service_person .layer_set_filter .box_radio_group:last-of-type {
     margin-bottom: 0;
     padding-bottom: 24px;
     border-bottom: 0
