--- a/pc/include/lnb_b.html
+++ b/pc/include/lnb_b.html
@@ -50,4 +50,19 @@
             <li><a href="javascript:void(0);" onclick="">대학생 맞춤형 고용서비스</a></li>
         </ul>
     </li>
+    <li class="depth"><a href="javascript:void(0);" onclick="" aria-expanded="false">상담내역</a>
+        <ul class="menuLevel3LiClassChk">
+            <li><a href="javascript:void(0);" onclick="">LNB Depth3</a></li>
+        </ul>
+    </li>
+    <li class="depth"><a href="javascript:void(0);" onclick="" aria-expanded="false">외국인고용사업주</a>
+        <ul class="menuLevel3LiClassChk">
+            <li><a href="javascript:void(0);" onclick="">LNB Depth3</a></li>
+        </ul>
+    </li>
+    <li class="depth"><a href="javascript:void(0);" onclick="" aria-expanded="false">내 전자지갑</a>
+        <ul class="menuLevel3LiClassChk">
+            <li><a href="javascript:void(0);" onclick="">LNB Depth3</a></li>
+        </ul>
+    </li>
 </ul>
